Practise/K8S-test-deploy/KUSTOMIZATION/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-backend-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: python-backend
